Added images, finished index.html, started on countdown timer

--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
     <head>
         <title>ToolKit</title>
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        
+        <link rel="stylesheet" type="text/css" href="css/footer.css">
     </head>
     <body>
         <h1>The ToolKit</h1>
         <div>
-            <button class="size text" id="calc">Calculator</button>
-            <button class="size text" id="todo">To-Do</button>
+            <a href="html/countdowntimer.html"><button class="size text" id="timer"><mark>&nbsp CountDown Timer &nbsp</mark></button></a>
+            <a href="html/todo.html"><button class="size text" id="todo" onclick="html/todo.html"><mark>&nbsp To-Do &nbsp</mark></button></a>
         </div>
         <div>
-            <button class="size text" id="timer">CountDown Timer</button>
-            <button class="size text" id="weather">Weather</button>
+            <button class="size text" id="calc"><mark>&nbsp Under &nbsp</mark><br><mark>&nbsp Construction &nbsp</mark></button>
+            <button class="size text" id="weather" ><mark>&nbsp Under &nbsp</mark><br><mark>&nbsp Construction &nbsp</mark></button>
         </div>
         <footer>
-            <p>By Tristan Delgado</p>
+            <div>
+                <a target="_blank" href="https://instagram.com/tristandelgado04"><img src="images/footerImages/instagram.png" alt="Instagram link" title="Instagram"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/tristandelgado44"><img src="images/footerImages/linkedin.png" alt="linkedIn link" title="LinkedIn"></a>
+                <a target="_blank" href="mailto:tristandelgado44@gmail.com"><img src="images/footerImages/gmail.png" alt="Gmail link" title="Gmail"></a>
+                <a target="_blank" href="https://github.com/TristanDelgado"><img src="images/footerImages/github.png" alt="Github link" title="Github"></a>
+            </div>
+            <p> Created by Tristan Delgado</p>
         </footer>
     </body>
 </html>
