All pages added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>The ToolKit</h1>
         <div>
             <a href="html/countdowntimer.html"><button class="size text" id="timer"><mark>&nbsp CountDown Timer &nbsp</mark></button></a>
-            <a href="html/todo.html"><button class="size text" id="todo" onclick="html/todo.html"><mark>&nbsp To-Do &nbsp</mark></button></a>
+            <a href="html/quotes.html"><button class="size text" id="quotes" onclick="html/quotes.html"><mark>&nbsp Quote Generator &nbsp</mark></button></a>
         </div>
         <div>
             <button class="size text" id="calc"><mark>&nbsp Under &nbsp</mark><br><mark>&nbsp Construction &nbsp</mark></button>
