--- a/html/countdowntimer.html
+++ b/html/countdowntimer.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Timers</title>
         <link rel="stylesheet" type="text/css" href="../css/footer.css">
         <link rel="stylesheet" type="text/css" href="../css/navigation.css">
         <link rel="stylesheet" type="text/css" href="../css/countdown.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>s
         <script type="text/javascript" src="../js/countdown.js"></script>
     </head>
     <body>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="../html/countdowntimer.html">Countdown Timer</a></li>
-            <li><a href="../html/todo.html">To-Do List</a></li>
+            <li><a href="../html/quotes.html">Quote Generator</a></li>
             <li><a href="../index.html">Under Construction</a></li>
             <li id="last"><a href="../index.html">Under Construction</a></li>
         </ul>
         <div id="popup">
             <form>
                 <label>Timer Name</label><br>
-                <input type="text" id="name" name="name"><br>
+                <input type="text" id="name" name="name" placeholder="name"><br>
                 <label>Days</label><br>
                 <input type="number" id="day" name="day"><br>
                 <label>Hours</label><br>
-                <input type="number" id="Hours" name="Hours"><br>
+                <input type="number" id="hours" name="Hours"><br>
                 <label>Minutes</label><br>
-                <input type="number" id="Minutes" name="Minutes"><br>
+                <input type="number" id="minutes" name="Minutes"><br>
                 <label>Seconds</label><br>
-                <input type="number" id="Seconds" name="Seconds"><br>
-                <input type="submit" id="submit" name="submit" onClick="submitPressed()">
+                <input type="number" id="seconds" name="Seconds"><br>
+                <input type="button" id="submit" name="submit" value="Submit" onClick="submitPressed()">
             </form>
         </div>
+        <div id="deletePopup"></div>
         <div id="timers"> 
-           <table>
+           <table class="Days until 2030">
                 <caption>Days until 2030</caption>
                 <tr>
                     <th>Days</th>
@@ -46,7 +47,7 @@
                     <td>00</td>
                 </tr>
             </table>
-            <table>
+            <table class="Days until end of semester">
                 <caption>Days until end of semester</caption>
                 <tr>
                     <th>Days</th>
@@ -60,12 +61,11 @@
                     <td>00</td>
                     <td>00</td>
                 </tr>
-
             </table>
         </div>
         <div id="addremovebuttonsdiv">
             <button class="buttons" id="add" onClick="addCountDown()"><img src="../images/plus3t.png" alt="add countdown button" title="add"></button>
-            <button class="buttons" id="remove"><img src="../images/whitext.png" alt="remove countdown button" title="remove"></button>
+            <button class="buttons" id="remove" onClick="remove()"><img src="../images/whitext.png" alt="remove countdown button" title="remove"></button>
         </div>
     </body>
     <footer>
