All requirements met for homework

--- a/html/countdowntimer.html
+++ b/html/countdowntimer.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <title>Timers</title>
+        <link rel="icon" href="../images/clock.png">
         <link rel="stylesheet" type="text/css" href="../css/footer.css">
         <link rel="stylesheet" type="text/css" href="../css/navigation.css">
         <link rel="stylesheet" type="text/css" href="../css/countdown.css">
         <script type="text/javascript" src="../js/countdown.js"></script>
     </head>
-    <body>
+    <body onload="startUp()">
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="../html/countdowntimer.html">Countdown Timer</a></li>
@@ -32,34 +33,34 @@
         </div>
         <div id="deletePopup"></div>
         <div id="timers"> 
-           <table class="Days until 2030">
-                <caption>Days until 2030</caption>
+           <table class="Time it took to make this website">
+                <caption>Time it took to make this website</caption>
                 <tr>
                     <th>Days</th>
                     <th>Hours</th>
                     <th>Minutes</th>
                     <th>Seconds</th>
                 </tr>
-                <tr>
-                    <td>000</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
+                <tr class="timerValues">
+                    <td>5</td>
+                    <td>13</td>
+                    <td>5</td>
+                    <td>32</td>
                 </tr>
             </table>
-            <table class="Days until end of semester">
-                <caption>Days until end of semester</caption>
+            <table class="Fruit Fly life space">
+                <caption>Fruit Fly life space</caption>
                 <tr>
                     <th>Days</th>
                     <th>Hours</th>
                     <th>Minutes</th>
                     <th>Seconds</th>
                 </tr>
-                <tr>
-                    <td>000</td>
-                    <td>00</td>
-                    <td>00</td>
-                    <td>00</td>
+                <tr class="timerValues">
+                    <td>3</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>10</td>
                 </tr>
             </table>
         </div>
