--- a/html/quotes.html
+++ b/html/quotes.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Quotes</title>
+        <link rel="icon" href="../images/quotesymbol.png">
         <link rel="stylesheet" type="text/css" href="../css/footer.css">
         <link rel="stylesheet" type="text/css" href="../css/navigation.css">
         <link rel="stylesheet" type="text/css" href="../css/quotes.css">
